--- a/style.css
+++ b/style.css
@@ -2531,13 +2531,16 @@ body.apps-craft-v7 .apps-craft-position-rel .layer img {
 }
 .apps-craft-feature-img .icon-4x{
 	left: 0;
+	position: absolute;
 	top: -17px;
 	width: 73px;
+	z-index: 1;
 }
 .apps-craft-feature-img .icon-5x{
 	left: 0;
 	top: 120px;
 	width: 84px;
+	z-index: 3;
 }
 .apps-craft-feature-img .icon-6x{
 	top: 0;
