--- a/css/3dslider.css
+++ b/css/3dslider.css
@@ -1,4 +1,4 @@
-.apps-craft-screenshort {
+.fundition-screenshort {
      width: 250px;
      height: 505px;
      position: relative;
@@ -68,7 +68,7 @@
      transition: opacity 1s, transform 1s;
 }
 
-#apps-craft-screent-short-carousel figure img {
+#fundition-screent-short-carousel figure img {
       max-width: 100%;
       max-height: 100%;
 }
