--- a/style.css
+++ b/style.css
@@ -4065,3 +4065,36 @@ body.fundition-v9 .fundition-welcome-section .fundition-welcome-tbl {
     height: 650px;
 }
 
+.ct-legend {
+    position: relative;
+	z-index: 10;
+	text-align: center;
+}
+    li {
+        position: relative;
+        padding-left: 23px;
+        margin-bottom: 3px;
+    }
+
+    li:before {
+        width: 12px;
+        height: 12px;
+        position: absolute;
+        left: 0;
+        content: '';
+        border: 3px solid transparent;
+        border-radius: 2px;
+    }
+
+    li.inactive:before {
+        background: transparent;
+    }
+
+	.ct-legend li {
+		position: relative;
+		padding-left: 23px;
+		margin-right: 10px;
+		margin-bottom: 3px;
+		cursor: pointer;
+		display: inline-block;
+	}
